k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:  
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"        
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api-tutorial
          ports: 
          - containerPort: 8080
